<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="ST_HMI_C1_Ctrl2_Production_Timing_Analysis_1Ch" Id="5b1f07c2-ab6a-4322-b73b-305e4e3f07e8">
    <Declaration><![CDATA[TYPE ST_HMI_C1_Ctrl2_Production_Timing_Analysis_1Ch : 
STRUCT
	//Production Timing Analysis 1Ch
	bTrigReconfigure: BOOL;
	bM1_bIsOn: BOOL; //State
	tM1_fbTimeCurrentInterval: ST_ALY_TimeSpan; //Current Interval
	tM1_fbTimeOnTotal: ST_ALY_TimeSpan; //Total On
	tM1_fbTimeOffTotal: ST_ALY_TimeSpan; //Total Off
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>